Fixed entity and blockentity classes